Test-Styles engebaut

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9,4 +9,9 @@ body h1, body h2, body h3, body h4, body h5, body h6 {
   font-family: "Roboto", "Helvetica Nueue", Arial, sans-serif;
 }
 
+body {
+  color: #f08000;
+  background: #004000;
+}
+
 /*# sourceMappingURL=style.css.map */
